--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -33,12 +33,18 @@
 
 .btn-cart{
     width: 100%;
-    height: 50px;
     background: #FFE0B3;
     border: none;
     border-radius: 0px 0px 8px 8px;
     position: absolute;
     bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-text{
+    margin-right: 10px;
 }
 
 .btn-cart:hover{
